--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
@@ -44,6 +45,13 @@
       "last 1 safari version"
     ]
   },
-
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
+  }
 }
